Extra form inputs/form styles

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <div>
-        <form>
+        <form id="add-round-score">
+            <input type="text" placeholder="Round title">
+            <input type="date" placeholder="Round date">
             <input type="number" placeholder="Score for round">
             <input type="number" placeholder="Course rating">
             <input type="number" placeholder="Slope rating">
