--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <div>
+        <form action="/login" method="get" style="display:inline-block;">
+            <button type="submit">Login</button>
+        </form>
+    </div>
+    <div>
         <form id="add-round-score">
             <input type="text" placeholder="Round title">
             <input type="date" placeholder="Round date">
